// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration test controllers should not be in services 1`] = `
Array [
  Object {
    "details": Object {
      "file": Object {
        "label": "src\\\\services\\\\SomeController.ts",
      },
      "pattern": ".*\\\\\\\\services\\\\\\\\.*",
    },
    "message": "src\\\\services\\\\SomeController.ts should not match regex '.*\\\\\\\\services\\\\\\\\.*'",
  },
]
`;

exports[`Integration test services should be named Service 1`] = `
Array [
  Object {
    "details": Object {
      "file": Object {
        "label": "src\\\\services\\\\SomeController.ts",
      },
      "pattern": ".*Service.ts",
    },
    "message": "src\\\\services\\\\SomeController.ts should match regex '.*Service.ts'",
  },
]
`;
